# interfacing-c-and-lua

./: CMakeLists.txt  config.lua  main.cpp  readme.md
